overflow issue 3

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,10 @@
 header {
     position: fixed;
-    top: calc(100vh - 50px);
+    top: calc(100% - 50px);
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    /* height: 50px; */
 
     background-color: rgba(238, 237, 221, 0.99);
     padding: 10px;
@@ -17,6 +18,7 @@ header {
 
 .headerOpen {
     top: 0;
+    /* height: 100vh; */
     /* overflow: hidden; */
 }
 
